# rustup-pypi

./: Readme.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/rustup/: _build_wheel.py  _build_wheels.py  _shim.py  build_rustup_wheels.py  shim.py
tests/: Dockerfile.python  Dockerfile.uv-tool
