[project]
name = "rustup"
version = "1.28.2.2"
description = "rustup distribution for PyPI"
readme = "Readme.md"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "tqdm>=4.67.1,<5.0.0",
]
# Same license as rustup
license = "MIT OR Apache-2.0"

# https://github.com/rust-lang/rustup/blob/8b3aedcc599e9b6c6f3f1ece6a9a45dd4abc5ca4/src/lib.rs#L20-L37
[project.scripts]
cargo = "rustup.shim:cargo"
cargo-clippy = "rustup.shim:cargo_clippy"
cargo-fmt = "rustup.shim:cargo_fmt"
cargo-miri = "rustup.shim:cargo_miri"
clippy-driver = "rustup.shim:clippy_driver"
rls = "rustup.shim:rls"
rust-analyzer = "rustup.shim:rust_analyzer"
rust-gdb = "rustup.shim:rust_gdb"
rust-gdbgui = "rustup.shim:rust_gdbgui"
rust-lldb = "rustup.shim:rust_lldb"
rustc = "rustup.shim:rustc"
rustdoc = "rustup.shim:rustdoc"
rustfmt = "rustup.shim:rustfmt"

[dependency-groups]
build = [
    "uv_build>=0.9.0,<0.10.0",
    "puccinialin>=0.1.3,<0.2.0",
    "tomli>=2.2.1,<3.0.0; python_version < '3.11'",
]
lint = [
    "pyright>=1.1.400",
]

[tool.uv]
package = false
default-groups = ["build", "lint"]

[build-system]
requires = [
    "httpx>=0.28.1,<0.29.0",
    "tqdm>=4.67.1,<5.0.0",
    "uv_build>=0.9.0,<0.10.0",
    "puccinialin>=0.1.0,<0.2.0",
    "tomli>=2.2.1,<3.0.0; python_version < '3.11'"
]
build-backend = "rustup.build_backend"
backend-path = ["src"]
